--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-router-dom": "^6.16.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "sonner": "^1.0.3"
+    "sonner": "^1.0.3",
+    "sweetalert2": "^11.7.32",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
