--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.5.0",
     "cloudinary": "^1.40.0",
     "dotenv": "^16.3.1",
