--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "aos": "^2.3.4",
     "axios": "^1.5.0",
     "cloudinary": "^1.40.0",
@@ -18,6 +19,7 @@
     "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
