--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
-REACT_APP_URL_BASE=https://inmobiliaria-api-green.vercel.app  
+REACT_APP_URL_BASE=https://inmobiliaria-api-green.vercel.app
+
+#Firebase
+FIREBASE_APIKEY=AIzaSyA7t54t9myoEm6jxiaYhYT0vMFKf-OIwAY
+FIREBASE_AUTHDOMAIN=ruslux-ba31c.firebaseapp.com
+FIREBASE_PROJECTID=ruslux-ba31c
+FIREBASE_STORAGEBUCKET=ruslux-ba31c.appspot.com
+FIREBASE_MESSAGINGSENDERID=808836630831
+FIREBASE_APPID=1:808836630831:web:a5b11e7ad39233095c79da
+FIREBASE_MEASUREMENTID=G-KK34BYYM3J
+
 #REACT_APP_URL_BASE=http://localhost:8080
