--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "slick-carousel": "^1.8.1",
     "sonner": "^1.0.3",
     "sweetalert2": "^11.7.32",
-    "sweetalert2-react-content": "^5.0.7"
+    "sweetalert2-react-content": "^5.0.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
